<resources>
    <string name="app_name">Travelling Kotlin MVVM</string>
    <string name="onboarding_text_btn">Ir al Login</string>
    <string name="login_username_text">Usuario o email</string>
    <string name="login_password_text">Contraseña</string>
    <string name="login_login_btn_text">LOG-IN</string>
    <string name="onboarding_one_title">Tu App de Viajes</string>
    <string name="onboarding_one_text">Hola, estamos buscando a millones de usuarios con inquietudes y ganas de viajar.Si eres tu? No lo dudes accede a nuestra app y descubriras miles de destinos y facilidades para alquilar coches,ver el tiempo ...</string>
    <string name="onboarding_two_title">Find Your Match!</string>
    <string name="onboarding_two_text">We\'ve helped millions across the nation find their perfect match.. and you\'re next!</string>
    <string name="onboarding_three_title">Find the Perfect \nRoommate</string>
    <string name="onboarding_three_text">We\'ve helped millions across the nation find their perfect match.. and you\'re next!</string>
    <string name="login_error_user">El email no es valido</string>
    <string name="error_login_service">Ups, no hemos podido %s</string>
    <string name="login_background_animation">https://assets9.lottiefiles.com/packages/lf20_boJRmE.json</string>
    <string name="login_loading_animation">https://assets6.lottiefiles.com/packages/lf20_maasqjvl.json</string>
    <string name="login_login_Facebook_btn_text">FACEBOOK</string>
    <string name="cancel_facebook">Has decidido cancelar la sesión</string>
    <string name="error_facebook">Ups, hay un error %s</string>
    <string name="login_toolbar_title">LogIn Travelling</string>
    <string name="menu_label_hotel">Hoteles</string>
    <string name="menu_label_locale_hotel">Mapa</string>
    <string name="hotel_title">Precios estancia</string>
    <string name="list_hotels_title">Hoteles</string>
    <string name="selected_hotel">Hemos seleccionado el hotel Hotel %s</string>
    <string name="maps_no_permission">Sin permisos no podemos seguir</string>

</resources>