<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.tokioschool.travellingkotlinmvvm.presentation.features.login.vm.LoginViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:lottie_autoPlay="true"
            app:lottie_clipToCompositionBounds="true"
            app:lottie_loop="true"
            app:lottie_url="https://assets9.lottiefiles.com/packages/lf20_boJRmE.json" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginContentRoot"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginInputLayoutUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:hint="@string/login_username_text"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="center"
                app:layout_constraintVertical_bias="0.4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginInputUserName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={viewModel.username}"
                    android:textAppearance="?travellingBody16Inverse"
                    android:textColor="@color/secondaryTextColor">
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginInputLayoutPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:hint="@string/login_password_text"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginInputLayoutUserName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginInputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"
                    android:textAppearance="?travellingBody16Inverse"
                    android:textColor="@color/secondaryTextColor">
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_user_btn"
                style="?travellingButton_filled_round"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="24dp"
                android:enabled="@{viewModel.enableBtn}"
                android:onClick="@{()-> viewModel.logIn()}"
                android:text="@string/login_login_btn_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>